--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ h1, h3{
 .search{
     background: none;
     border: none;
+    outline: none;
     border-bottom: 1px #ccc solid;
     padding: 0 1em 0.5em 0;
     width: 80%;
@@ -140,6 +141,7 @@ h1, h3{
 
 .search:focus {
     outline: none;
+ 
 }
 
 .search::placeholder{
